# aoc22

./: .gitignore  Cargo.toml  README.md  lib.rs
day1/: task.kts
day10/: task.kts
day11/: task.kts
day12/: Cargo.toml  main.rs
day13/: Cargo.toml  main.rs
day14/: Cargo.toml  main.rs
day15/: Cargo.toml  main.rs
day16/: Cargo.toml  main.rs
day17/: main.rs
day18/: main.rs
day19/: main.rs
day2/: task.kts
day20/: main.rs
day21/: main.rs
day22/: main.rs
day3/: task.kts
day4/: task.kts
day5/: task.kts
day6/: task.kts
day7/: task.kts
day8/: task.kts
day9/: Cargo.toml  main.rs  task.kts
