[package]
name = "aoc22"
version = "0.0.0"
publish = false
edition = "2021"

[lib]
path = "lib.rs"

[[bin]]
name = "day9"
path = "day9/main.rs"

[[bin]]
name = "day12"
path = "day12/main.rs"

[[bin]]
name = "day13"
path = "day13/main.rs"

[[bin]]
name = "day14"
path = "day14/main.rs"

[[bin]]
name = "day15"
path = "day15/main.rs"

[[bin]]
name = "day16"
path = "day16/main.rs"

[[bin]]
name = "day17"
path = "day17/main.rs"

[[bin]]
name = "day18"
path = "day18/main.rs"

[[bin]]
name = "day19"
path = "day19/main.rs"

[[bin]]
name = "day20"
path = "day20/main.rs"

[[bin]]
name = "day21"
path = "day21/main.rs"

[[bin]]
name = "day22"
path = "day22/main.rs"

[dependencies]
anyhow = "1"
ariadne = "0.1"
bit-vec = "0.6"
chumsky = "0.8"
indexmap = "1.9"
paste = "1.0"
